delete own user profile route added + docs
